--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "install": "npm install"
+    "install": "npm install propertiesmanager"
   },
   "repository": {
     "type": "git",
